# gdv

uebung01/: 01.c  02.c  03.c
uebung02/: CMakeLists.txt
uebung02/src/: backface.cpp  flatshading.cpp  gouraudshading.cpp  lines.cpp  math3d.cpp  math3d.h  projection.cpp  teapot.cpp  teapot.h  teapotdata.cpp  trifill.cpp  wireframe.cpp
uebung03/src/: uebung3vorgaben.cpp
